11-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wcg.app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wcg
                port:
                  number: 8888
